[gd_scene load_steps=7 format=3 uid="uid://brqw1yirhnfn1"]

[ext_resource type="Script" uid="uid://tia2tnddrgd6" path="res://day1/day_1.gd" id="1_7htkw"]
[ext_resource type="PackedScene" uid="uid://co5yrplpv2qo6" path="res://player_character/player.tscn" id="1_48ukd"]
[ext_resource type="Texture2D" uid="uid://c70rfemuckpsl" path="res://day1/sprt_lvl_layout.png" id="2_wxk1o"]
[ext_resource type="PackedScene" uid="uid://v5wfel75jq1h" path="res://interactables/interactable.tscn" id="3_wxk1o"]
[ext_resource type="PackedScene" uid="uid://ddtvttl6lwx85" path="res://gui/gui.tscn" id="5_jxyad"]

[sub_resource type="LabelSettings" id="LabelSettings_7htkw"]
font_size = 300

[node name="Day1" type="Node2D"]
script = ExtResource("1_7htkw")

[node name="Player" parent="." instance=ExtResource("1_48ukd")]
z_index = 5
position = Vector2(217, 206.00002)
scale = Vector2(0.3, 0.3)

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(0, -29.333336)
zoom = Vector2(2, 2)
limit_enabled = false

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(207, 161)
texture = ExtResource("2_wxk1o")
metadata/_edit_lock_ = true

[node name="Interactable" parent="." groups=["Interactables", "cooler"] instance=ExtResource("3_wxk1o")]
position = Vector2(-55, 246)

[node name="Interactable2" parent="." groups=["Interactables", "printer"] instance=ExtResource("3_wxk1o")]
position = Vector2(219, 154)

[node name="Interactable3" parent="." groups=["Interactables", "elevator"] instance=ExtResource("3_wxk1o")]
position = Vector2(65, 202)

[node name="win_screen_placeholder" type="Label" parent="."]
visible = false
offset_left = -45.0
offset_top = -64.0
offset_right = 555.0
offset_bottom = 536.0
text = "win"
label_settings = SubResource("LabelSettings_7htkw")

[node name="Gui" parent="." instance=ExtResource("5_jxyad")]
visible = false

[connection signal="tree_exited" from="Interactable" to="." method="_on_interactable_tree_exited"]
[connection signal="tree_exited" from="Interactable2" to="." method="_on_interactable_2_tree_exited"]
[connection signal="tree_exited" from="Interactable3" to="." method="_on_interactable_3_tree_exited"]
